Reworked rail shots